# taro-lang

./: .gitignore  Cargo.toml  README.md  build.rs  docs.md  index.html  sketch.md  transpilations.md
.github/workflows/: deploy-playground.yml  rust.yml  unit-tests.yml
assets/: index-2cc7974b.js  index-d6d3e6e5.css  index.080a35fa.js  index.14086c5b.css  index.1c29be4b.js  index.1e361ec3.js  index.1f7ab51f.js  index.4f729796.js  index.8f046bca.js  index.979076d4.js  index.9ac90f52.js  index.bdc51119.js  index.d68d084c.css  index.e7b7cbc6.js  index.f4fc70d1.js  index.f8485e2e.js  taro_bg-629ca3c1.wasm  taro_bg.2fae9c10.wasm  taro_bg.3e720283.wasm  taro_bg.6336e149.wasm  taro_bg.6e91c234.wasm  taro_bg.6ecfbe6c.wasm  taro_bg.7468de51.wasm  taro_bg.a1bb135a.wasm  taro_bg.b242a350.wasm  taro_bg.c7aafbca.wasm  taro_bg.de2cbfd3.wasm  taro_bg.ebba8897.wasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: transpiler.rs
playground/: index.html  package-lock.json  package.json  vite.config.js
playground/src/: main.ts  style.css
src/: lib.rs  main.rs  wasm.rs
src/ast/: ast_walker.rs  mod.rs  test_utils.rs
src/code_gen/: mod.rs
src/error_message/: error_formatter.rs  error_msg_utils.rs  mod.rs  sym_collect_errors.rs  sym_resolution_errors.rs  type_check_errors.rs  type_eval_errors.rs
src/formatter/: mod.rs
src/ir/: ast_lowering.rs  ast_walker.rs  context.rs  ir_walker.rs  late_init.rs  mod.rs  ref_generator.rs  test_utils.rs
src/parser/: comment.rs  control_flow.rs  enumeration.rs  escape_block.rs  expression.rs  expressions.rs  external.rs  function.rs  generics.rs  identifier.rs  mod.rs  module.rs  statement.rs  statements.rs  structure.rs  (+3 more)
tests/: transpilations.rs  transpile_template.txt
(+74 files in other folders)
