[package]
edition = "2021"
name = "taro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom_locate = "4.0.0"
typed-arena = "2.0.1"

[profile.release]
lto = true # substantially improves speed of `nom` parsers
