[package]
edition = "2021"
name = "taro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"
nom = "7"
nom_locate = "4.0.0"

[profile.release]
lto = true # substantially improves speed of `nom` parsers
