[package]
description = "The Taro Programming Language"
edition = "2021"
license = "Apache-2.0"
name = "taro"
repository = "https://github.com/viktorstrate/taro-lang"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"
nom = "7"
nom_locate = "4.0.0"

[profile.release]
lto = true # substantially improves speed of `nom` parsers

# WASM Library
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
